--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <title>Lonely - Free bootstrap 3 one page template</title>
 
+	<!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round|Open+Sans:400,300,600,400italic,700" rel="stylesheet" type="text/css">
+
     <!-- CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
