--- a/index.html
+++ b/index.html
@@ -108,32 +108,26 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>UI/UX Designer &amp; Web Developer.</h2>
-            <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
-              </div>
-            </div>
+            <h2>Tralalero Tralala: The Internet’s Mysterious Echo</h2>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+             What exactly is Tralalero Tralala? Is it a song? A meme? A joke? Or just an echo from the internet’s wild imagination?
+            </p>
+            <p class="py-3">
+              No one truly knows where it started — and that’s part of the charm. It popped up unexpectedly in videos, comment sections, and conversations, almost like a digital ghost haunting our collective timeline. Some believe it originated from a niche sound clip, while others think it's a playful remix of an old folk tune. But most people simply embrace it for what it is: pure, unapologetic chaos.
+	    </p>
+<p class="py-3">
+Tralalero Tralala doesn’t need a deep meaning. It’s the sound of absurd joy. It’s what you sing when you don’t want to make sense. It’s a rebellion against logic, and a celebration of the strange.
+</p>
+		  <p class="py-3">
+From TikTok trends to random Discord channels, the phrase has become a sort of secret handshake. A symbol that says: “Yes, I’m part of this weird little corner of the internet.”
+</p>
+		  <p class="py-3">
+And when you say it — or even better, shout it — you’re not just making noise. You’re joining a wave.
+</p>
+		  <p class="py-3">
+So go ahead.
+Let go.
+Say it loud: Tralalero Tralala.
             </p>
           </div>
         </div>
