--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+
 </head>
 
 <body class="index-page">
@@ -34,7 +35,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1 class="sitename">Tralalelo Tralala</h1>
+        <h1 class="sitename">Tralalero Tralala</h1>
       </a>
 
     </div>
@@ -56,7 +57,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Tralalelo Tralala</h2>
+        <h2>About</h2>
+        <p>To spread chaotic joy, confuse boomers, and occasionally trend on TikTok without explanation.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -68,28 +70,38 @@
           <div class="col-lg-8 content">
             <h2>Tralalero Tralala: The Internet’s Mysterious Echo</h2>
             <p class="py-3">
-             What exactly is Tralalero Tralala? Is it a song? A meme? A joke? Or just an echo from the internet’s wild imagination?<br>
-		    No one truly knows where it started — and that’s part of the charm. It popped up unexpectedly in videos, comment sections, and conversations, almost like a digital ghost haunting our collective timeline. Some believe it originated from a niche sound clip, while others think it's a playful remix of an old folk tune. But most people simply embrace it for what it is: pure, unapologetic chaos.<br>
-		    Tralalero Tralala doesn’t need a deep meaning. It’s the sound of absurd joy. It’s what you sing when you don’t want to make sense. It’s a rebellion against logic, and a celebration of the strange.<br>
-		    From TikTok trends to random Discord channels, the phrase has become a sort of secret handshake. A symbol that says: “Yes, I’m part of this weird little corner of the internet.”<br>
-		    And when you say it — or even better, shout it — you’re not just making noise. You’re joining a wave.<br>
-		    So go ahead. Let go.<br>
-		    Say it loud: Tralalero Tralala.<br>
+              What exactly is Tralalero Tralala?
+Is it a song? A meme? A joke? Or just an echo from the internet’s wild imagination?
             </p>
+            <p class="py-3">
+              No one truly knows where it started — and that’s part of the charm.
+It popped up unexpectedly in videos, comment sections, and conversations, almost like a digital ghost haunting our collective timeline. Some believe it originated from a niche sound clip, while others think it's a playful remix of an old folk tune. But most people simply embrace it for what it is: pure, unapologetic chaos.
+            </p>
+		  <p class="py-3">
+             Tralalero Tralala doesn’t need a deep meaning. It’s the sound of absurd joy. It’s what you sing when you don’t want to make sense. It’s a rebellion against logic, and a celebration of the strange.
+
+From TikTok trends to random Discord channels, the phrase has become a sort of secret handshake. A symbol that says: “Yes, I’m part of this weird little corner of the internet.”
+		  </p>
+		  <p class="py-3">
+             Tralalero Tralala doesn’t need a deep meaning. It’s the sound of absurd joy. It’s what you sing when you don’t want to make sense. It’s a rebellion against logic, and a celebration of the strange.
+
+From TikTok trends to random Discord channels, the phrase has become a sort of secret handshake. A symbol that says: “Yes, I’m part of this weird little corner of the internet.”
+		  </p>
           </div>
         </div>
 
       </div>
 
     </section><!-- /About Section -->
-    
+
+
     <!-- Resume Section -->
-    <section id="resume" class="resume section light-background">
+    <section id="resume" class="resume section dark-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>TRALAALAAAAAAAAA</p>
+        <p>Just scream “TRALALAAA” into the void, I’ll hear you</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -101,35 +113,38 @@
 
             <div class="resume-item pb-0">
               <h4>Tralalero Tralala</h4>
-		<ul>
-                <li> Name: Tralalero Tralala</li>
-                <li>Age: Unknown (rumored to be born during a meme eclipse 🌕✨)</li>
+        	<ul>
+                <li>Age: Unknown (rumored to be born during a meme eclipse)</li>
                 <li>Location: Somewhere between the internet and your imagination</li>
-		<li>Email: tralala@notarealemail.com</li>
-		<li>Phone: Just scream “TRALALAAA” into the void, I’ll hear you</li>
+                <li>Email: tralala@notarealemail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>PhD in Memeology (Honorary)</h4>
-		<h4>Bachelor of Arts in Bizarre Noises</h4>
-		<h4>Certified in “IDK What That Means But I Love It”</h4>
-             </div>
-
+		    <h4>Bachelor of Arts in Bizarre Noises</h4>
+		    <h4>Certified in “IDK What That Means But I Love It”</h4>
+        </div><!-- Edn Resume Item -->
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Skills</h3>
+            <h3 class="resume-title">Work Experience</h3>
             <div class="resume-item">
+              <h4>Chief Vibe Officer – Internet Vibes Inc. </h4>
+              <h5>2019 - Present</h5>
               <ul>
-                <li>Expert in nonsense communication</li>
-                <li>Fluent in Gibberish, Meme-speak, and Keyboard Smash</li>
-                <li>Breakdancing at inappropriate moments</li>
-                <li>Ability to become a viral sound without existing</li>
+                <li>Responsibilities: Appearing out of nowhere, dancing, then disappearing with no context.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
+            <div class="resume-item">
+              <h4>Intern – Random YouTube Video</h4>
+              <h5>2019</h5>
+              <ul>
+                <li>Accidentally said “tralalero tralala” into a mic and changed the course of internet history.</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
 
           </div>
 
@@ -139,14 +154,11 @@
 
     </section><!-- /Resume Section -->
 
-    
-
   </main>
 
   <footer id="footer" class="footer light-background">
     <div class="container">
       <h3 class="sitename">Tralalero Tralala</h3>
-      <p>The Internet’s Mysterious Echo</p>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
