--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1 class="sitename">Tralalero Tralala</h1>
+        <h1 class="sitename">Tralalero Tralala</h1></a>
 	<nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
